Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21000

tst_qjsvalue declarative autotest fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • 5.0.0
    • None
    • e6c0633a9c386817017a97dac9e541a45f42fd7f

    Description

      This declarative autotest fails.

      8/18/11 6:09:51 PM EST: FAIL!  : tst_QJSValue::castToPointer() Compared values are not the same
      8/18/11 6:09:51 PM EST:    Actual (*ip): -1080313732
      8/18/11 6:09:51 PM EST:    Expected (123): 123
      8/18/11 6:09:51 PM EST:    Loc: [tst_qjsvalue.cpp(3708)]
      

      A full test log is available at http://pulse.test.qt.nokia.com:8080/file/artifacts/127690448/_artifacts/test-logs/tst_qjsvalue-00.txt (Nokia LAN)

      Attachments

        For Gerrit Dashboard: QTBUG-21000
        # Subject Branch Project Status CR V

        Activity

          People

            kenthans Kent Hansen (Inactive)
            rmcgover Rohan McGovern (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes