Fix tst_qjsvalue::castToPointer test failure

In order for casting the variant's data() to work,
we need to get at the actual QVariant wrapped in
the JS object; copying the variant caused a stale
pointer to be returned.

Task-number: QTBUG-21000
Change-Id: I1a32a70d5a043c94dbbd07ef2c8048e7df7fc7bf
Reviewed-on: http://codereview.qt.nokia.com/3309
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Simon Hausmann <simon.hausmann@nokia.com>